* Version 0.2.1 (unreleased)

  * Correctly display mode for OTP+U2F devices.

* Version 0.2.0 (released 2014-09-16)

  * Removed usage of card manager keys for normal use.

  * Added support for U2F modes (if hardware supports it).

  * Better support for composite devices.

* Version 0.1.0 (released 2014-03-25)

  * Added the ability to view installed applet versions.

  * Updated ykneomgr with ability to send custom APDUs.

* Version 0.0.2 (released 2014-03-20)

  * Support for installing/removing applets.

  * Support for multiple NEOs.

  * Better support for platform specific packaging.

* Version 0.0.1 (released 2013-11-13)

  * Initial release supporting mode changing.